; ModuleID = '/home/carl/AnghaBench/seafile/common/cdc/extr_cdc.c_filename_chunk_cdc.c'
source_filename = "/home/carl/AnghaBench/seafile/common/cdc/extr_cdc.c_filename_chunk_cdc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@O_RDONLY = common dso_local global i32 0, align 4
@O_BINARY = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [25 x i8] c"CDC: failed to open %s.\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @filename_chunk_cdc(i8* %0, i32* %1, i32* %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  store i8* %0, i8** %6, align 8
  store i32* %1, i32** %7, align 8
  store i32* %2, i32** %8, align 8
  store i32 %3, i32* %9, align 4
  %12 = load i8*, i8** %6, align 8
  %13 = load i32, i32* @O_RDONLY, align 4
  %14 = load i32, i32* @O_BINARY, align 4
  %15 = or i32 %13, %14
  %16 = call i32 @seaf_util_open(i8* %12, i32 %15)
  store i32 %16, i32* %10, align 4
  %17 = load i32, i32* %10, align 4
  %18 = icmp slt i32 %17, 0
  br i1 %18, label %19, label %22

19:                                               ; preds = %4
  %20 = load i8*, i8** %6, align 8
  %21 = call i32 @seaf_warning(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0), i8* %20)
  store i32 -1, i32* %5, align 4
  br label %31

22:                                               ; preds = %4
  %23 = load i32, i32* %10, align 4
  %24 = load i32*, i32** %7, align 8
  %25 = load i32*, i32** %8, align 8
  %26 = load i32, i32* %9, align 4
  %27 = call i32 @file_chunk_cdc(i32 %23, i32* %24, i32* %25, i32 %26)
  store i32 %27, i32* %11, align 4
  %28 = load i32, i32* %10, align 4
  %29 = call i32 @close(i32 %28)
  %30 = load i32, i32* %11, align 4
  store i32 %30, i32* %5, align 4
  br label %31

31:                                               ; preds = %22, %19
  %32 = load i32, i32* %5, align 4
  ret i32 %32
}

declare dso_local i32 @seaf_util_open(i8*, i32) #1

declare dso_local i32 @seaf_warning(i8*, i8*) #1

declare dso_local i32 @file_chunk_cdc(i32, i32*, i32*, i32) #1

declare dso_local i32 @close(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
